Fix inspection problems